# Yosef

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  DotNetEcosystemStudy.csproj  DotNetEcosystemStudy.sln  LocalDatabase.db  Program.cs  README.md  ServiceCollectionExtensions.cs  Yosef.sln  appsettings.Development.json  appsettings.Homolog.json  appsettings.Production.json  appsettings.QA.json  appsettings.json  docker-compose.yml
Aggregates/: IAggregateRoot.cs  IEntity.cs  ITableObject.cs  Organization.cs  Project.cs
DataModel/: OrganizationDataModel.cs
Dev/: .env  Dockerfile.migrator  TestOrganization.ps1  docker-compose.yml  migrate.ps1  migrate.sh  nginx.conf  otel-collector-config.yml  secrets.json  seed_organization.ps1  setup-vault.ps1  setup_secrets.ps1
Docs/: Hashicorp Vault.md
Endpoints/: CreateOrganization.cs  GetOrganizations.cs  OrganizationRequest.cs
Infrastructure/: EntityFrameworkServiceCollectionExtensions.cs  IOrganizationRepository.cs  OrganizationRepository.cs
Migrations/: 20250621204147_InitialCreate.Designer.cs  20250621204147_InitialCreate.cs  OrganizationContextModelSnapshot.cs
ProjectManagement/: Dockerfile
Properties/: launchSettings.json
Settings/: AzureServiceBusSettings.cs  BaseServiceUriSettings.cs  DataProtectionSettings.cs  GlobalSettings.cs  (+6 more)
src/Identity/: Dockerfile  docker-compose.yml  pyproject.toml
src/Identity/app/: config.py  main.py  schemas.py
src/Identity/app/clients/: keycloak_admin_client.py  keycloak_client.py
src/Identity/app/routers/: token.py  users.py
(+393 files in other folders)
