[tool.poetry]
name = "identity"
version = "0.1.0"
description = "Identity"
authors = ["Yuri Melo <yurifullstack@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
httpx = "^0.28.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"        # framework de testes
httpx = "^0.28.1"        # cliente HTTP para testes de endpoints
ruff = "^0.4.0"          # linter rápido para manter estilo consistente
black = "^24.4.0"        # formatador automático de código
mypy = "^1.10.0"         # verificação de tipos para evitar bugs
